# playwright_python

./: .dockerignore  .gitignore  .pre-commit-config copy.yaml  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  Dockerfile  README.md  devbox.json  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
